@@ -1,0 +1,11 @@
+using System;
+
+namespace Video4Linux.Analog
+{
+	public enum CaptureMethod
+	{
+		ReadWrite,
+		MemoryMapping,
+		UserPointer
+	}
+}
